[gd_scene load_steps=5 format=2]

[ext_resource path="res://Menu/Arrows.png" type="Texture" id=1]
[ext_resource path="res://Menu/WASD.png" type="Texture" id=2]
[ext_resource path="res://Menu/SettingsMenu.gd" type="Script" id=3]

[sub_resource type="StyleBoxLine" id=1]
thickness = 7

[node name="SettingsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 312.0
margin_bottom = 168.0
color = Color( 0.184314, 0.184314, 0.184314, 1 )

[node name="SettingsTitle" type="Label" parent="."]
margin_left = 136.0
margin_top = 16.0
margin_right = 187.0
margin_bottom = 30.0
text = "Settings"

[node name="ControlButton" type="CheckButton" parent="."]
margin_left = 28.0
margin_top = 34.0
margin_right = 154.0
margin_bottom = 90.0
focus_mode = 0
custom_icons/off = ExtResource( 2 )
custom_icons/on = ExtResource( 1 )
text = "Control"

[node name="AvatarButton" type="OptionButton" parent="."]
margin_left = 182.0
margin_top = 52.0
margin_right = 302.0
margin_bottom = 72.0
focus_mode = 0
text = "Default Avatar"
items = [ "Default Avatar", null, false, 1, null, "Green Avatar", null, false, 1, null ]
selected = 0

[node name="SensitivitySlider" type="HSlider" parent="."]
margin_left = 32.0
margin_top = 114.0
margin_right = 168.0
margin_bottom = 130.0
focus_mode = 0
custom_styles/slider = SubResource( 1 )
min_value = 40.0
max_value = 120.0
step = 20.0
value = 80.0
rounded = true

[node name="Title" type="Label" parent="SensitivitySlider"]
margin_left = 13.0
margin_top = -16.0
margin_right = 123.0
margin_bottom = -2.0
text = "Speed/Sensitivity"

[node name="SliderValue" type="Label" parent="SensitivitySlider"]
margin_left = 31.0
margin_top = 14.0
margin_right = 105.0
margin_bottom = 28.0
text = "80 (Default)"
align = 1

[node name="SaveButton" type="Button" parent="."]
margin_left = 256.0
margin_top = 144.0
margin_right = 304.0
margin_bottom = 164.0
focus_mode = 0
text = "Save"

[connection signal="button_up" from="ControlButton" to="." method="_on_ControlButton_button_up"]
[connection signal="value_changed" from="SensitivitySlider" to="." method="_on_SensitivitySlider_value_changed"]
[connection signal="button_up" from="SaveButton" to="." method="_on_SaveButton_button_up"]
